--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-CONNECTION_URL = mongodb+srv://enesozkurt:enesozkurt123@cluster0.6wcyu.mongodb.net/test
+CONNECTION_URL = mongodb+srv://<username>:<password>@cluster0.6wcyu.mongodb.net/<dbname>?retryWrites=true&w=majority
